Fix problem with IE scrollbar displaying on top of content

--- a/src/app/app.less
+++ b/src/app/app.less
@@ -3,6 +3,7 @@ html {
 }
 body {
   margin: 0;
+  -ms-overflow-style: scrollbar; //Prevents issue with IE scrollbar being on top of content
 }
 a {
   cursor: pointer;
